--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,23 +23,28 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
+          cache: 'pnpm'
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Run linter
-        run: npm run lint
+        run: pnpm run lint
 
       - name: Run tests
-        run: npm test
+        run: pnpm test
 
-      - name: Build TypeScript
-        run: npm run build
+      - name: Build and bundle
+        run: pnpm run build
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
