--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "dev": "http-server public -p 8000",
+    "build": "esbuild src/main.ts --bundle --outfile=public/dist/main.js --format=esm",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -15,13 +16,19 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@eslint/js": "^9.36.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.6.2",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
+    "esbuild": "^0.25.10",
     "eslint": "^9.36.0",
+    "http-server": "^14.1.1",
     "jest": "^30.2.0",
     "ts-jest": "^29.4.4",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "chart.js": "^4.5.0"
   }
 }
