--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^9.36.0",
     "http-server": "^14.1.1",
     "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "ts-jest": "^29.4.4",
     "typescript": "^5.9.3"
   },
